# linkedAPI

./: README.md  pyproject.toml
config/: .env  __init__.py  database.py  setting.py
src/: main.py
src/jobs/: api.py  models.py  schemas.py  scraper.py  services.py
src/users/: api.py  models.py  schemas.py  services.py
